systeminstaller-oscar (2.3.7-1) gutsy; urgency=low

  * added check whether all packages were really installed (new feature of packman)

  * added functionality to umount /proc recursively.

 -- Erich Focht <efocht@hpce.nec.com>  Thu, 08 Nov 2007 15:56:01 +0100

systeminstaller-oscar (2.3.6-2) gutsy; urgency=low

  * Add a dependency with systemimager-server for the package
    systeminstaller-oscar-x11 since the perl modules SystemImager/Server.pm is needed.

 -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 07 Nov 2007 20:53:58 -0500

systeminstaller-oscar (2.3.6-1) stable; urgency=low

  * new feature of image builder: passing of package group files

 -- Erich Focht <efocht@hpce.nec.com>  Mon, 05 Nov 2007 17:08:01 +0100

systeminstaller-oscar (2.3.5-1) stable; urgency=low

  * urgent fix for newre Tk versions (suse 10.2) in SystemImager/Tk/Image.pm

 -- Erich Focht <efocht@hpce.nec.com>  Sun, 04 Nov 2007 14:08:11 +0100

systeminstaller-oscar (2.3.4-1) stable; urgency=low

  * fix trouble with non-english locale: ifconfig output is unexpected
  * when virtual interfaces are defined, they need to be excluded from the
    dhcp configuration, otherwise dhcpd won't start
  * month in comment is wrong (in the range 0..11)
  * ifconfig is used without path, sometimes this leads to problems
  * for software raids the automatically created mdadm.conf had a wrong raid level

 -- Erich Focht <efocht@hpce.nec.com>  Sat, 27 Oct 2007 17:07:10 +0100

systeminstaller-oscar (2.3.3-1) stable; urgency=low

  * Fixed bug introduced in changeset 5892 (breaking repository selection)

 -- Erich Focht <efocht@hpce.nec.com>  Fri, 19 Oct 2007 11:07:10 +0100

systeminstaller-oscar (2.3.2-1) stable; urgency=low

  * Modified checks for systemconfigurator to accept opkg-sis-client OR systemconfigurator

 -- Erich Focht <efocht@hpce.nec.com>  Mon, 15 Oct 2007 13:07:20 +0100

systeminstaller-oscar (2.3.1-2gv3) stable; urgency=low

  * Include configuration files into the different packages.